@@ -1,5 +1,4 @@
 #!/bin/sh
 
 sudo yum install -y \
-    mysql \
     perl-Text-Diff
