@@ -1,6 +1,5 @@
 #!/bin/sh
 
 sudo dnf install -y \
-    mysql \
     perl-Text-Diff \
     perl-Devel-Cover
