@@ -5,5 +5,4 @@
 
 sudo apt-get install -y \
     libdevel-cover-perl \
-    libtext-diff-perl \
-    mysql-client
+    libtext-diff-perl
